# ktools-cpp

./: .gitmodules  .kbuild.json  AGENTS.md  README.md
docs/: kbuild.md
kcli/: .gitignore  .kbuild.json  AGENTS.md  CMakeLists.txt  README.md
kcli/agent/: BOOTSTRAP.md
kcli/cmake/: 10_dependencies.cmake  20_targets.cmake  50_install_export.cmake  KcliSDKConfig.cmake.in
kcli/cmake/tests/: CMakeLists.txt  kcli_api_cases.cpp
kcli/demo/bootstrap/: CMakeLists.txt
kcli/demo/bootstrap/src/: main.cpp
kcli/demo/exe/core/: CMakeLists.txt
kcli/demo/exe/core/cmake/tests/: CMakeLists.txt  demo_cli_cases.sh
kcli/demo/exe/core/src/: main.cpp
kcli/demo/exe/omega/: CMakeLists.txt
kcli/demo/exe/omega/cmake/tests/: CMakeLists.txt  demo_cli_cases.sh
kcli/demo/exe/omega/src/: main.cpp
kcli/demo/sdk/alpha/: CMakeLists.txt
kcli/demo/sdk/alpha/cmake/: AlphaSDKConfig.cmake.in
kcli/demo/sdk/alpha/include/alpha/: sdk.hpp
kcli/demo/sdk/alpha/src/: cli.cpp
kcli/demo/sdk/beta/: CMakeLists.txt
kcli/demo/sdk/beta/cmake/: BetaSDKConfig.cmake.in
kcli/demo/sdk/beta/include/beta/: sdk.hpp
kcli/demo/sdk/beta/src/: cli.cpp
kcli/demo/sdk/gamma/: CMakeLists.txt
kcli/demo/sdk/gamma/cmake/: GammaSDKConfig.cmake.in
kcli/demo/sdk/gamma/include/gamma/: sdk.hpp
kcli/demo/sdk/gamma/src/: cli.cpp
kcli/docs/: README.md  api.md  behavior.md  examples.md  index.md
kcli/include/: kcli.hpp
kcli/src/: kcli.cpp
kcli/src/kcli/: backend.hpp  impl.cpp  process.cpp  util.cpp  util.hpp
kconfig/: CMakeLists.txt  README.md
kconfig/agent/projects/: issues-march-10.md
kconfig/cmake/: 10_dependencies.cmake  20_targets.cmake  50_install_export.cmake  KconfigSDKConfig.cmake.in
kconfig/cmake/tests/: CMakeLists.txt  kconfig_json_api_test.cpp
kconfig/demo/bootstrap/: CMakeLists.txt  README.md
kconfig/demo/bootstrap/src/: main.cpp
kconfig/demo/exe/core/: CMakeLists.txt  README.md
kconfig/demo/exe/core/cmake/tests/: CMakeLists.txt  demo_config_cases.sh
kconfig/demo/exe/core/runtime/: defaults.json  session.json
kconfig/demo/exe/core/src/: main.cpp
kconfig/demo/exe/omega/: CMakeLists.txt  README.md
kconfig/demo/exe/omega/cmake/tests/: CMakeLists.txt  demo_config_cases.sh
kconfig/demo/exe/omega/src/: main.cpp
kconfig/demo/sdk/alpha/: CMakeLists.txt  README.md
kconfig/demo/sdk/alpha/cmake/: AlphaSDKConfig.cmake.in
kconfig/demo/sdk/alpha/include/alpha/: sdk.hpp
kconfig/demo/sdk/alpha/src/: main.cpp
kconfig/demo/sdk/beta/: CMakeLists.txt  README.md
kconfig/demo/sdk/beta/cmake/: BetaSDKConfig.cmake.in
kconfig/demo/sdk/beta/include/beta/: sdk.hpp
kconfig/demo/sdk/beta/src/: main.cpp
kconfig/demo/sdk/gamma/: CMakeLists.txt  README.md
kconfig/demo/sdk/gamma/cmake/: GammaSDKConfig.cmake.in
kconfig/demo/sdk/gamma/include/gamma/: sdk.hpp
kconfig/demo/sdk/gamma/src/: main.cpp
kconfig/include/: kconfig.hpp
kconfig/include/kconfig/: asset.hpp  cli.hpp  json.hpp  store.hpp
kconfig/include/kconfig/store/: fs.hpp  read.hpp  user.hpp
kconfig/src/: kconfig.cpp
kconfig/src/kconfig/: asset.cpp  cli.cpp  io.cpp  io.hpp  json.cpp  store.cpp  store.hpp  trace.hpp
kconfig/src/kconfig/store/: access.cpp  api_impl.hpp  bindings.cpp  fs.cpp  internal.hpp  json_path.cpp  layers.cpp  persistence.cpp  read.cpp  state.cpp  user.cpp
ki18n/: CMakeLists.txt  README.md
ki18n/agent/: BOOTSTRAP.md
ki18n/cmake/: 10_dependencies.cmake  20_targets.cmake  50_install_export.cmake  Ki18nSDKConfig.cmake.in
ki18n/demo/bootstrap/: CMakeLists.txt  README.md
ki18n/demo/bootstrap/src/: main.cpp
ki18n/demo/exe/core/: CMakeLists.txt  README.md
ki18n/demo/exe/core/runtime/assets/: banner.txt
ki18n/demo/exe/core/runtime/strings/: en.json  fr.json
ki18n/demo/exe/core/src/: main.cpp
ki18n/demo/exe/omega/: CMakeLists.txt  README.md
ki18n/demo/exe/omega/cmake/tests/: CMakeLists.txt  demo_i18n_cases.sh
ki18n/demo/exe/omega/runtime/: i18n.json  user.json
ki18n/demo/exe/omega/src/: main.cpp
ki18n/demo/sdk/alpha/: CMakeLists.txt  README.md
ki18n/demo/sdk/alpha/cmake/: AlphaSDKConfig.cmake.in
ki18n/demo/sdk/alpha/include/alpha/: sdk.hpp
ki18n/demo/sdk/alpha/src/: main.cpp
ki18n/demo/sdk/beta/: CMakeLists.txt  README.md
ki18n/demo/sdk/beta/cmake/: BetaSDKConfig.cmake.in
ki18n/demo/sdk/beta/include/beta/: sdk.hpp
ki18n/demo/sdk/beta/src/: main.cpp
ki18n/demo/sdk/gamma/: CMakeLists.txt  README.md
ki18n/demo/sdk/gamma/cmake/: GammaSDKConfig.cmake.in
ki18n/demo/sdk/gamma/include/gamma/: sdk.hpp
ki18n/demo/sdk/gamma/src/: main.cpp
ki18n/include/: ki18n.hpp
ki18n/include/ki18n/: i18n.hpp
ki18n/src/: ki18n.cpp
ki18n/src/ki18n/: i18n.cpp
ktrace/: AGENTS.md  README.md
ktrace/agent/projects/: windows-tests.md
projects/: kcli-updates.md  updates.md
