add_executable(kcli_api_cases
    ${CMAKE_CURRENT_LIST_DIR}/kcli_api_cases.cpp
)

target_link_libraries(kcli_api_cases
    PRIVATE
        kcli::sdk
)

ktools_apply_runtime_rpath(kcli_api_cases)

function(kcli_add_api_case case_name)
    add_test(
        NAME kcli_api_${case_name}
        COMMAND $<TARGET_FILE:kcli_api_cases> ${case_name}
    )
endfunction()

kcli_add_api_case(parser_empty_parse_succeeds)
kcli_add_api_case(inline_parser_rejects_invalid_root)
kcli_add_api_case(end_user_known_options_with_unknown_option_error)
kcli_add_api_case(add_alias_rewrites_tokens)
kcli_add_api_case(add_alias_preset_tokens_append_to_value_handlers)
kcli_add_api_case(add_alias_preset_tokens_satisfy_required_values)
kcli_add_api_case(add_alias_preset_tokens_apply_to_inline_root_values)
kcli_add_api_case(add_alias_rewrites_after_double_dash)
kcli_add_api_case(parser_can_be_reused_across_parses)
kcli_add_api_case(alias_does_not_rewrite_required_value_tokens)
kcli_add_api_case(add_alias_rejects_invalid_alias)
kcli_add_api_case(add_alias_rejects_single_dash_target)
kcli_add_api_case(add_alias_rejects_invalid_target)
kcli_add_api_case(add_alias_rejects_preset_values_for_flag_targets)
kcli_add_api_case(positional_handler_requires_nonempty)
kcli_add_api_case(end_user_handler_normalization_rejects_single_dash)
kcli_add_api_case(inline_handler_normalization_accepts_short_and_full_forms)
kcli_add_api_case(inline_handler_normalization_rejects_wrong_root)
kcli_add_api_case(inline_bare_root_prints_help)
kcli_add_api_case(inline_root_value_handler_help_row_prints)
kcli_add_api_case(inline_root_value_handler_joins_tokens)
kcli_add_api_case(inline_missing_root_value_handler_errors)
kcli_add_api_case(optional_value_handler_allows_missing_value)
kcli_add_api_case(optional_value_handler_accepts_explicit_empty_value)
kcli_add_api_case(flag_handler_does_not_consume_following_tokens)
kcli_add_api_case(required_value_handler_rejects_missing_value)
kcli_add_api_case(required_value_handler_accepts_dash_prefixed_first_value)
kcli_add_api_case(required_value_handler_preserves_shell_whitespace)
kcli_add_api_case(required_value_handler_accepts_explicit_empty_value)
kcli_add_api_case(positional_handler_preserves_explicit_empty_tokens)
kcli_add_api_case(unknown_inline_option_errors)
kcli_add_api_case(unknown_option_reports_double_dash)
kcli_add_api_case(unknown_option_throws_cli_error)
kcli_add_api_case(option_handler_exception_throws_cli_error)
kcli_add_api_case(positional_handler_exception_throws_cli_error)
kcli_add_api_case(single_pass_processing_consumes_inline_end_user_and_positionals)
kcli_add_api_case(inline_parser_root_override_applies)
kcli_add_api_case(duplicate_inline_root_rejected)
